--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 1
 date: 2014-07-18
-img: IST_panel_discussion
+img: IST_panel_discussion.png
 alt: image-alt
 project-date: April 2014
 client: Indiana University
