--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -7,6 +7,6 @@ alt: image-alt
 project-date: April 2014
 client: Indiana University
 category: Web Development
-caption: IST Conference Panel 2017
+pdf: job_aid22.pdf
 ---
 This poster was designed for the IST Conference 2017 Panel Discussion session, developed by Ling Qian using Illustrator CC.
