update projects page

--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -1,5 +1,6 @@
 ---
 layout: default
+type: instructional design
 name: APA ESL experimental research project
 date: 2017-03-5
 tools: experiment design
